<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_clean_plan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/clean_plan" />
        <item
            android:id="@+id/nav_new_task"
            android:icon="@drawable/ic_add_white_18dp"
            android:title="@string/new_task" />
        <item
            android:id="@+id/nav_template"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/template" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/statistic" />
    </group>



</menu>
